# bd2_auto

./: .gitignore
core/: CMakeLists.txt  CMakePresets.json
core/include/automator/: ui_automator.h
core/include/basic/: base_config.h  base_task.h  charset.hpp  exceptions.h  json_rpc.h  json_rpc_handler.h  logger.h  path_util.hpp  service_app.h  task_manager.h  threaded_task.h
core/include/core/: base_task.h  service_app.h  task_manager.h
core/include/cv/: point_matcher.h
core/include/io/: backend.h  mouse_handler.h  screenshot.h  win_helper.h  window_handler.h
core/include/meta/: generated_ui.h  generated_ui_layout.h
core/include/tasks/: fishing_task.h  hello_task.h
core/include/windows/: window_handler.h
core/src/: main.cpp
core/src/automator/: ui_automator.cpp
core/src/basic/: json_rpc.cpp  json_rpc_handler.cpp  logger.cpp  service_app.cpp  task_manager.cpp  threaded_task.cpp
core/src/core/: service_app.cpp
core/src/cv/: point_matcher.cpp
core/src/dev/: ui_element_generator.cpp
core/src/io/: mouse_handler.cpp  screenshot.cpp  window_handler.cpp
core/src/tasks/: fishing_task.cpp  hello_task.cpp
core/src/windows/: window_handler.cpp
core/tests/: sift_test.cpp
gui/: package.json  pnpm-lock.yaml
gui/src/: App.vue  main.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/.cargo/: config.toml
gui/src-tauri/src/: lib.rs  main.rs
gui/src-tauri/windows/: hooks.nsh
gui/src/components/: CoreManager.vue
gui/src/components/core/: LogsCard.vue  StatusCard.vue  TaskConfigCard.vue  TaskControlCard.vue  TitleBar.vue  types.ts
gui/src/script/: prepare-sidecar.ts
include/core/: json_rpc_handler.h
include/tasks/: hello_task.h
src/core/: json_rpc_handler.cpp  task_manager.cpp
